Fix language selector misalignments

--- a/vue-project/src/styles/app.scss
+++ b/vue-project/src/styles/app.scss
@@ -39,8 +39,8 @@ html, body {
         .lang-choice {
             color: #333;
             margin-left: 20px;
-            width: 32px;
-            height: 32px;
+            width: 34px;
+            height: 34px;
             font-size: 12px;
             line-height:16px;
             font-weight: 600;
